--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                        <div class="timeline-item">
                         <div class="circle-dot"></div>
                         <h6 class="timeline-date"></h6>
-                        <i class="fa fa-calendar"></i> Juillet - Novembre 2024
+                        <i class="fa fa-calendar"></i> Juillet 2022 - Octobre 2024  
                         <h4 class="timeline-title">Chef de projet multimédia</h4>
                         <p class="timeline-text">Titre professionnel de niveau 7 (bac +5) <br> Contrat en alternance</p>
                         <br>
@@ -399,7 +399,7 @@
                         <div class="timeline-item">
                         <div class="circle-dot"></div>
                         <h6 class="timeline-date"></h6>
-                        <i class="fa fa-calendar"></i> Mars - Décembre 2021
+                        <i class="fa fa-calendar"></i> Janvier 2021 - Décembre 2021
                         <h4 class="timeline-title">Concepteur développeur d'applications</h4>
                         <p class="timeline-text">Titre professionnel de niveau 6 (bac +3/+4) de concepteur développeur d'applications Durée de 1490 heures (dont 420 heures en entreprise)</p>
                         <br>
@@ -411,19 +411,7 @@
                        <div class="timeline-item">
                         <div class="circle-dot"></div>
                         <h6 class="timeline-date"></h6>
-                        <i class="fa fa-calendar"></i> Janvier - Mars 2021
-                        <h4 class="timeline-title">TBDW</h4>
-                        <p class="timeline-text">Technique de base du développement d'applications</p>
-                        <br>
-                        <i class="fa fa-map-marker mt-3"></i> 
-                        <a href="https://www.afpa.fr/formation-professionnalisante/techniques-de-base-du-developpement-d-applications" target="_blank" title="AFPA" >AFPA, Amiens</a> 
-                     </div>
-                     <!--end item-->
-                       <!--item-->
-                       <div class="timeline-item">
-                        <div class="circle-dot"></div>
-                        <h6 class="timeline-date"></h6>
-                        <i class="fa fa-calendar"></i> Juillet - Janvier 2021
+                        <i class="fa fa-calendar"></i> Juillet 2020 - Janvier 2021
                         <h4 class="timeline-title">DVE (Dynamique vers d'emploi - CLÉA)</h4>
                         <p class="timeline-text">Certificat de connaissances et de compétences professionnelles</p>
                         <br>
@@ -435,7 +423,7 @@
                        <div class="timeline-item">
                         <div class="circle-dot"></div>
                         <h6 class="timeline-date"></h6>
-                        <i class="fa fa-calendar"></i> Juin - Juillet  2020
+                        <i class="fa fa-calendar"></i> Juin 2020 - Juillet 2020
                         <h4 class="timeline-title">LEA (Se former pour lire, écrire, agir)</h4>
                         <p class="timeline-text">Français mise à niveau</p>
                         <br>
@@ -489,7 +477,7 @@
                        <div class="timeline-item">
                         <div class="circle-dot"></div>
                         <h6 class="timeline-date"></h6>
-                        <i class="fa fa-calendar"></i> Mai - Aujourd'hui
+                        <i class="fa fa-calendar"></i> Mai 2022 - Aujourd'hui
                         <h4 class="timeline-title">UX / UI Designer | Chef de projet multimédia en alternance</h4>
                         <p class="timeline-text"><b>Client : Portalliance | Airbus Atlantic</b><br>
                           Fonction : Designer UX/UI - Chef de projet multimédia<br>
@@ -526,7 +514,7 @@
                        <div class="timeline-item">
                         <div class="circle-dot"></div>
                         <h6 class="timeline-date"></h6>
-                        <i class="fa fa-calendar"></i> Janvier - Avril 2023
+                        <i class="fa fa-calendar"></i> Janvier 2023 - Avril 2023
                         <h4 class="timeline-title">UX / UI Designer | Chef de projet multimédia en alternance</h4>
                         <p class="timeline-text">
                           <ul>
@@ -546,7 +534,7 @@
                        <div class="timeline-item">
                         <div class="circle-dot"></div>
                         <h6 class="timeline-date"></h6>
-                        <i class="fa fa-calendar"></i> Juillet -  Décembre 2022 
+                        <i class="fa fa-calendar"></i> Juillet 2022 -  Décembre 2022 
                         <h4 class="timeline-title">UX / UI Designer | Chef de projet multimédia en alternance</h4>
                         <p class="timeline-text">
                           <ul>
@@ -571,7 +559,7 @@
                        <div class="timeline-item">
                         <div class="circle-dot"></div>
                         <h6 class="timeline-date"></h6>
-                        <i class="fa fa-calendar"></i> Mai - Juillet 2022
+                        <i class="fa fa-calendar"></i> Mai 2022 - Juillet 2022
                         <h4 class="timeline-title">UX/UI Designer en CDD</h4>
                         <p class="timeline-text">
                           <ul>
@@ -596,7 +584,7 @@
                       <div class="timeline-item">
                         <div class="circle-dot"></div>
                         <h6 class="timeline-date"></h6>
-                        <i class="fa fa-calendar"></i> Janvier - Mars 2022
+                        <i class="fa fa-calendar"></i> Janvier 2022 - Mars 2022
                         <h4 class="timeline-title">UX/UI Designer freelance</h4>
                         <p class="timeline-text">
                           <ul>
@@ -620,7 +608,7 @@
                        <div class="timeline-item">
                         <div class="circle-dot"></div>
                         <h6 class="timeline-date"></h6>
-                        <i class="fa fa-calendar"></i> Septembre - Décembre 2021
+                        <i class="fa fa-calendar"></i> Septembre 2021 - Décembre 2021
                         <h4 class="timeline-title">Développeur Full-Stack stagiaire</h4>
                         <p class="timeline-text">
                           <ul> 
