--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -130,7 +130,7 @@
           <div class="fh5co-project-inner row">
             <div class="fh5co-imgs col-md-8 animate-box">
               <div class="img-holder-1 animate-box">
-                <img src="images/MicrohsAccueil.png" alt="Micro-hs" />
+                <img src="images/Microhs/Group 19.jpg" alt="Micro-hs" />
               </div>
               <!-- <div class="img-holder-2 animate-box">
 							  <img src="#" alt="Extramuutto">
