--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     <!--Telecharge CV-->
                    <div class="row mt-5"> 
                       <div class="col-12 padd-15 pb-5">
-                     <a href="Sana HOMAEI-CV-UXUI Designer.pdf" target="_blank" title="CV-PDF" class="btn">Imprimer CV</a>
+                     <a href="" target="_blank" title="CV-PDF" class="btn">Imprimer CV</a>
                       </div>
                     </div> 
                 <!--End about section-->
@@ -420,7 +420,7 @@
                      </div>
                      <!--end item-->
 
-                     
+
                         <!--item-->
                         <!-- <div class="timeline-item">
                           <div class="circle-dot"></div>
@@ -467,7 +467,7 @@
                        <div class="timeline-item">
                         <div class="circle-dot"></div>
                         <h6 class="timeline-date"></h6>
-                        <i class="fa fa-calendar"></i> Mai 2022 - Aujourd'hui
+                        <i class="fa fa-calendar"></i> Mai 2023 - Aujourd'hui
                         <h4 class="timeline-title">UX / UI Designer | Chef de projet multimédia en alternance</h4>
                         <p class="timeline-text"><b>Client : Portalliance | Airbus Atlantic</b><br>
                           Fonction : Designer UX/UI - Chef de projet multimédia<br>
@@ -574,7 +574,7 @@
                       <div class="timeline-item">
                         <div class="circle-dot"></div>
                         <h6 class="timeline-date"></h6>
-                        <i class="fa fa-calendar"></i> Janvier 2022 - Mars 2022
+                        <i class="fa fa-calendar"></i> Janvier 2022 - Avril 2022
                         <h4 class="timeline-title">UX/UI Designer freelance</h4>
                         <p class="timeline-text">
                           <ul>
