--- a/index.html
+++ b/index.html
@@ -331,10 +331,10 @@
                               <div class="portfolio-item padd-15" data-category="Logiciel">
                                 <div class="portfolio-item-inner shadow-dark">
                                   <div class="portfolio-img">
-                                    <img src="img/liferaay.png" alt="Liferay.jpg">
+                                    <img src="img/SketchLogo.svg" alt="Sketch.jpg">
                                   </div>
                                   <div class="portfolio-info">
-                                    <h4>Liferay</h4>
+                                    <h4>Sketch</h4>
                                   </div>
                                 </div>
                               </div>
