updated portfolio link

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           </li>
 
           <li>
-            <a href="/portfolio/"><i class="fa fa-image"></i>Mon Portfolio</a>
+            <a href="https://uxora.framer.media/"><i class="fa fa-image"></i>Mon Portfolio</a>
           </li>
         </ul>
       </div>
