--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <ul class="nav">
           <!--
           <li>
-            <a href="#accueil" class="active"><i class="fa fa-home"></i> Accueil</a>
+            <a href="https://uxora.framer.media/" class="active"><i class="fa fa-home"></i> Accueil</a>
           </li>
            -->
           <li>
@@ -106,7 +106,7 @@
               <div class="about-content padd-15">
                 <div class="row">
                   <div class="about-text padd-15">
-                    <h3>Diplômée d'un Master en direction artistique spécialisé en UX/UI design de Ynov Campus Toulouse, avec 3 ans d'expérience dans le domaine.</h3>
+                    <h3>Diplômée d'un Master en direction artistique spécialisé en UX/UI design de Ynov Campus Toulouse, avec 4 ans d'expérience dans le domaine.</h3>
                     <p>
                       Bonjour! Je m'appelle Sana.<br>
                       En tant qu'UX/UI Designer et Chef de projet multimédia, j'ai acquis une solide expertise en design d'interface et en expérience utilisateur. Je suis actuellement à 
