--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                         <div class="circle-dot"></div>
                         <h6 class="timeline-date"></h6>
                         <i class="fa fa-calendar"></i> Mai 2023 - Aujourd'hui
-                        <h4 class="timeline-title">UX / UI Designer | Chef de projet multimédia en alternance</h4>
+                        <h4 class="timeline-title">UX / UI Designer | Chef de projet multimédia </h4>
                         <p class="timeline-text"><b>Client : Portalliance | Airbus Atlantic</b><br>
                           Fonction : Designer UX/UI - Chef de projet multimédia<br>
                           Projet : OneFem<br>
