--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                             <li>Création de maquettes et de prototypes interactifs pour le projet OneFem</li>
                             <li>Conception d'interfaces utilisateur intuitives et esthétiques</li>
                             <li>Réalisation de tests utilisateurs et ajustements basés sur le retour d'expérience</li>
-                            <li>Rédaction des spécifications fonctionnelles pour les interfaces utilisateur</li>
+                            <li>Rédaction des spécifications fonctionnelles</li>
                             <li>Création de guides d'utilisation (user guides) pour accompagner les utilisateurs finaux</li>
                             <li>Contribution à l'optimisation de l'expérience utilisateur dans les applications OneFem</li>
                             <li>Veille sur les tendances UX/UI pour garantir des designs modernes et pertinents</li>
