--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                             <li>Veille sur les tendances UX/UI pour garantir des designs modernes et pertinents</li>
                           </ul>
 
-                          <p class="timeline-text"> <b>Client : Airbus Allemagne</b> <br>
+                          <p class="timeline-text"> <b>Client : Airbus Operations GmbH</b> <br>
                           Fonction : Designer UX/UI - Chef de projet multimédia <br>
                           Projet : FACILE <br>
                           Missions et réalisations : <br>
