--- a/index.html
+++ b/index.html
@@ -496,6 +496,19 @@
                             <li>Contribution à l'optimisation de l'expérience utilisateur dans les applications FACILE</li>
                             <li>Veille sur les tendances UX/UI pour garantir des designs modernes et pertinents</li>
                           </ul>
+
+                          <p class="timeline-text"> <b>Client :  Airbus Helicopters</b> <br>
+                            Fonction : Designer UX/UI - Chef de projet multimédia <br>
+                            Projet : HULK <br>
+                            Missions et réalisations : <br>
+                            <ul>
+                              <li>Réalisation de maquettes et de prototypes dynamiques pour le projet HULK</li>
+                              <li>Conception d’interfaces ergonomiques et visuellement harmonieuses</li>
+                              <li>Collaboration étroite avec les développeurs afin d’assurer le respect des maquettes et la fidélité du design lors de l’intégration</li>
+                              <li>Rédaction de documents fonctionnels et de guides utilisateurs clairs</li>
+                              <li>Contribution à l’amélioration continue de l’expérience utilisateur</li>
+                              <li>Veille sur les tendances UX/UI pour proposer des solutions modernes et pertinentes</li>
+                            </ul>
                           
                           <i class="fa fa-map-marker mt-3"></i> Portalliance, Toulouse
                        </div>
