--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <!--logo-->
         <div class="logo">
-          <a href="#Sana-HOMAEI">HOMAEI</a>
+          <img src="portfolio/images/logome.svg" alt="Logo UXORA" class="logo-img">
         </div>
 
         <div class="nav-toggler">
@@ -83,7 +83,7 @@
                 class="shadow-dark"
               />
               <h1>Sana HOMAEI</h1>
-              <p> UX/UI Designer | Chef de projet multimédia </p>
+              <p> UX/UI Designer | Product Designer </p>
               <div class="social-links">
                 <!-- <a href="https://www.facebook.com/sana.hm.3150" target="_blank"  title="facebook"><i class="fa fa-facebook"></i></a> -->
                 <a href="https://github.com/Sana-hm"  target="_blank" title="github"><i class="fa fa-github"></i></a>
@@ -109,8 +109,7 @@
                     <h3>Diplômée d'un Master en direction artistique spécialisé en UX/UI design de Ynov Campus Toulouse, avec 4 ans d'expérience dans le domaine.</h3>
                     <p>
                       Bonjour! Je m'appelle Sana.<br>
-                      En tant qu'UX/UI Designer et Chef de projet multimédia, j'ai acquis une solide expertise en design d'interface et en expérience utilisateur. Je suis actuellement à 
-                      la recherche d'une nouvelle opportunité professionnelle, ouverte à des postes en <b>CDI</b> ou à <b>des missions freelance</b>. Je souhaite mettre à profit mes compétences dans un environnement dynamique et stimulant, où je pourrai contribuer de manière significative au succès des projets.
+                      En tant que UX/UI Designer et Product Designer, j’ai développé une solide expertise en design d’interface et en expérience utilisateur. Je suis actuellement à la recherche d’une nouvelle opportunité professionnelle, que ce soit en <b> CDI</b> ou en <b>mission freelance.</b> e souhaite mettre mes compétences au service d’un environnement dynamique et stimulant, afin de contribuer de manière significative au succès des projets.
                      <br></p>
                 </div>
                 <div class="row">
@@ -141,7 +140,7 @@
                     <!--Telecharge CV-->
                    <div class="row mt-5"> 
                       <div class="col-12 padd-15 pb-5">
-                     <a href="CV Sana HOMAEI.pdf" target="_blank" title="CV-PDF" class="btn">Imprimer CV</a>
+                     <a href="Sana Homaei - CV Resume.pdf" target="_blank" title="CV-PDF" class="btn">Imprimer CV</a>
                       </div>
                     </div> 
                 <!--End about section-->
