--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
                         <div class="circle-dot"></div>
                         <h6 class="timeline-date"></h6>
                         <i class="fa fa-calendar"></i> Mai 2023 - Aujourd'hui
-                        <h4 class="timeline-title">UX / UI Designer | Chef de projet multimédia </h4>
+                        <h4 class="timeline-title">Product Designer | UX / UI Designer</h4>
                         <p class="timeline-text"><b>Client : Portalliance | Airbus Atlantic</b><br>
                           Fonction : Designer UX/UI - Chef de projet multimédia<br>
                           Projet : OneFem<br>
@@ -485,7 +485,7 @@
                           </ul>
 
                           <p class="timeline-text"> <b>Client : Airbus Operations GmbH</b> <br>
-                          Fonction : Designer UX/UI - Chef de projet multimédia <br>
+                          Fonction : Designer UX/UI <br>
                           Projet : FACILE <br>
                           Missions et réalisations : <br>
                           <ul>
@@ -519,7 +519,7 @@
                         <div class="circle-dot"></div>
                         <h6 class="timeline-date"></h6>
                         <i class="fa fa-calendar"></i> Janvier 2023 - Avril 2023
-                        <h4 class="timeline-title">UX / UI Designer | Chef de projet multimédia en alternance</h4>
+                        <h4 class="timeline-title">UX / UI Designer </h4>
                         <p class="timeline-text">
                           <ul>
                             <li>Conception et adaptation de maquettes graphiques de sites internet à l'aide de Figma, avec réalisation de tests utilisateurs.
@@ -538,8 +538,8 @@
                        <div class="timeline-item">
                         <div class="circle-dot"></div>
                         <h6 class="timeline-date"></h6>
-                        <i class="fa fa-calendar"></i> Juillet 2022 -  Décembre 2022 
-                        <h4 class="timeline-title">UX / UI Designer | Chef de projet multimédia en alternance</h4>
+                        <i class="fa fa-calendar"></i> Mai 2022 -  Décembre 2022 
+                        <h4 class="timeline-title">UX / UI Designer </h4>
                         <p class="timeline-text">
                           <ul>
                             <li>Création et déclinaison de maquettes graphiques de sites internet.
@@ -559,37 +559,13 @@
                           <i class="fa fa-map-marker mt-3"></i> Beorn Technologies, Toulouse
                        </div>
                      <!--end item-->
-                           <!--item-->
-                       <div class="timeline-item">
-                        <div class="circle-dot"></div>
-                        <h6 class="timeline-date"></h6>
-                        <i class="fa fa-calendar"></i> Mai 2022 - Juillet 2022
-                        <h4 class="timeline-title">UX/UI Designer en CDD</h4>
-                        <p class="timeline-text">
-                          <ul>
-                            <li>Création et déclinaison de maquettes graphiques de sites internet.
-                            </li>
-                            <li>Proposition de concepts créatifs et graphiques lors d'appels d'offres.
-                            </li>
-                            <li>Refonte d'identités visuelles, incluant la conception de logos et de chartes graphiques.
-                            </li>
-                            <li>Développement de la partie front-end des projets.
-                            </li>
-                            <li>Gestion proactive des demandes d'évolution dans un environnement agile.
-                            </li>
-                            <li>Réalisation de tests utilisateurs pour optimiser l'expérience client.
-                            </li>
-                          </ul>
-                          
-                          <i class="fa fa-map-marker mt-3"></i> Beorn Technologies, Toulouse
-                       </div>
-                     <!--end item-->
+                     
                       <!--item-->
                       <div class="timeline-item">
                         <div class="circle-dot"></div>
                         <h6 class="timeline-date"></h6>
                         <i class="fa fa-calendar"></i> Janvier 2022 - Avril 2022
-                        <h4 class="timeline-title">UX/UI Designer freelance</h4>
+                        <h4 class="timeline-title">UX/UI Designer en freelance</h4>
                         <p class="timeline-text">
                           <ul>
                             <li>Conception de sites internet sur WordPress.
@@ -613,7 +589,7 @@
                         <div class="circle-dot"></div>
                         <h6 class="timeline-date"></h6>
                         <i class="fa fa-calendar"></i> Septembre 2021 - Décembre 2021
-                        <h4 class="timeline-title">Développeur Full-Stack stagiaire</h4>
+                        <h4 class="timeline-title">Développeur Full-Stack </h4>
                         <p class="timeline-text">
                           <ul> 
                             <li>Contribuer au développement d'un projet web pour la mairie</li>
